--- a/exercises/vagrant/Vagrantfile
+++ b/exercises/vagrant/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
 
   # set the image for the vagrant box
   config.vm.box = "opensuse/Leap-15.2.x86_64"
-  config.vm.hostname = "Opensuse-Leap-15.2-x86_64"
+  config.vm.hostname = "Opensuse-Leap-15.2-x86-64"
 
   ## Set the image version
   # config.vm.box_version = "15.2.31.212"
