--- a/exercises/helm/templates/configmap.yaml
+++ b/exercises/helm/templates/configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  version: { { .Values.image.tag } }
+  version: "{{ .Values.image.tag }}"
 kind: ConfigMap
 metadata:
   name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
