--- a/exercises/helm/templates/deployment.yaml
+++ b/exercises/helm/templates/deployment.yaml
@@ -2,16 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: { { .Values.image.repository } }
-    tag: { { .Values.image.tag } }
+    app: "{ { .Values.image.repository } }"
+    tag: "{ { .Values.image.tag } }"
   name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
-  namespace: { { .Values.namespace.name } }
+  namespace: "{ { .Values.namespace.name } }"
 spec:
-  replicas: { { .Values.replicaCount } }
+  replicas: "{ { .Values.replicaCount } }"
   selector:
     matchLabels:
-      app: { { .Values.image.repository } }
-      tag: { { .Values.image.tag } }
+      app: "{ { .Values.image.repository } }"
+      tag: "{ { .Values.image.tag } }"
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,14 +20,14 @@ spec:
   template:
     metadata:
       labels:
-        app: { { .Values.image.repository } }
-        tag: { { .Values.image.tag } }
+        app: "{ { .Values.image.repository } }"
+        tag: "{ { .Values.image.tag } }"
     spec:
       containers:
         - name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: { { .Values.imagePullPolicy } }
+          imagePullPolicy: "{ { .Values.imagePullPolicy } }"
           resources:
             requests:
-            memory: { { .Values.resources.memory } }
-            cpu: { { .Values.resources.cpu } }
+            memory: "{ { .Values.resources.memory } }"
+            cpu: "{ { .Values.resources.cpu } }"
