--- a/exercises/helm/templates/service.yaml
+++ b/exercises/helm/templates/service.yaml
@@ -2,16 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: { { .Values.image.repository } }
-    tag: { { .Values.image.tag } }
+    app: "{{ .Values.image.repository }}"
+    tag: "{{ .Values.image.tag }}"
   name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
-  namespace: { { .Values.namespace.name } }
+  namespace: "{{ .Values.namespace.name }}"
 spec:
   ports:
-    - port: { { .Values.service.port } }
+    - port: "{{ .Values.service.port }}"
       protocol: TCP
       targetPort: 8111
   selector:
-    app: { { .Values.image.repository } }
-    tag: { { .Values.image.tag } }
-  type: { { .Values.service.type } }
+    app: "{{ .Values.image.repository }}"
+    tag: "{{ .Values.image.tag }}"
+  type: "{{ .Values.service.type }}"
