--- a/exercises/helm/templates/deployment.yaml
+++ b/exercises/helm/templates/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
   namespace: "{{ .Values.namespace.name }}"
 spec:
-  replicas: "{{ .Values.replicaCount }}"
+  replicas: { { .Values.replicaCount } }
   selector:
     matchLabels:
       app: "{{ .Values.image.repository }}"
@@ -26,8 +26,8 @@ spec:
       containers:
         - name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: "{{ .Values.imagePullPolicy }}"
+          imagePullPolicy: { { .Values.imagePullPolicy } }
           resources:
             requests:
-            memory: "{{ .Values.resources.memory }}"
-            cpu: "{{ .Values.resources.cpu }}"
+              memory: "{{ .Values.resources.memory }}"
+              cpu: "{{ .Values.resources.cpu }}"
