Fix Helm creation application YAML parsing error

--- a/exercises/helm/values.yaml
+++ b/exercises/helm/values.yaml
@@ -9,8 +9,9 @@ replicaCount: 3
 imagePullPolicy: IfNotPresent
 
 resources:
-  cpu: "50m"
-  memory: "256Mi"
+  requests:
+    cpu: 50m
+    memory: 256Mi
 
 service:
   type: ClusterIP
