--- a/exercises/helm/values-prod.yaml
+++ b/exercises/helm/values-prod.yaml
@@ -8,8 +8,9 @@ image:
 replicaCount: 2
 
 resources:
-  cpu: "70m"
-  memory: "256Mi"
+  requests:
+    cpu: 70m
+    memory: 256Mi
 
 service:
   port: 80
