--- a/exercises/helm/templates/service.yaml
+++ b/exercises/helm/templates/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ .Values.image.repository }}
-    tag: {{ .Values.image.tag }}
+    app: "{{ .Values.image.repository }}"
+    tag: "{{ .Values.image.tag }}"
   name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
   namespace: {{ .Values.namespace.name }}
 spec:
@@ -12,6 +12,6 @@ spec:
       protocol: TCP
       targetPort: {{ .Values.service.port }}
   selector:
-    app: {{ .Values.image.repository }}
-    tag: {{ .Values.image.tag }}
+    app: "{{ .Values.image.repository }}"
+    tag: "{{ .Values.image.tag }}"
   type: {{ .Values.service.type }}
