--- a/exercises/helm/templates/configmap.yaml
+++ b/exercises/helm/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  version: {{ .Values.image.tag }}
+  version: "{{ .Values.image.version }}"
 kind: ConfigMap
 metadata:
-  name: '{{ .Values.image.repository }}-{{ .Values.image.tag }}'
+  name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
   namespace: {{ .Values.namespace.name }}
