--- a/exercises/helm/templates/deployment.yaml
+++ b/exercises/helm/templates/deployment.yaml
@@ -2,16 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: "{{ .Values.image.repository }}"
-    tag: "{{ .Values.image.tag }}"
+    app: {{ .Values.image.repository }}
+    tag: {{ .Values.image.tag }}
   name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
   namespace: {{ .Values.namespace.name }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: "{{ .Values.image.repository }}"
-      tag: "{{ .Values.image.tag }}"
+      app: {{ .Values.image.repository }}
+      tag: {{ .Values.image.tag }}
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,12 +20,12 @@ spec:
   template:
     metadata:
       labels:
-        app: "{{ .Values.image.repository }}"
-        tag: "{{ .Values.image.tag }}"
+        app: {{ .Values.image.repository }}
+        tag: {{ .Values.image.tag }}
     spec:
       containers:
         - name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.version }}"
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
