--- a/exercises/helm/templates/service.yaml
+++ b/exercises/helm/templates/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: "{{ .Values.image.repository }}"
-    tag: "{{ .Values.image.tag }}"
+    app: {{ .Values.image.repository }}
+    tag: {{ .Values.image.tag }}
   name: "{{ .Values.image.repository }}-{{ .Values.image.tag }}"
   namespace: {{ .Values.namespace.name }}
 spec:
