--- a/exercises/helm/templates/deployment.yaml
+++ b/exercises/helm/templates/deployment.yaml
@@ -28,4 +28,4 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.version }}"
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           resources:
-            {{ toYaml .Values.resources }}
+{{ toYaml .Values.resources | indent 12 }}
